--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -24,7 +24,7 @@
           <div class="card__actions">
             <a class="btn" href="/admin/edit-product/<%= prods._id %>?edit=true">Edit</a>
             <form action="/admin/delete-product" method="post">
-              <input type="hidden" name="_id" value="<%= prods._id %>" />
+              <input type="hidden" name="productId" value="<%= prods._id %>" />
             <button class="btn">Delete</button>
             </form>
           </div>
